unpackaged/main/default/objects/SBQQ__TaxExemptionCertificate__c/fields/SBQQ__Active__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>An Active Certificate will make set the ‘Tax Exempt?’ field on the Active to true</description>
    <inlineHelpText>Un certificat actif définit le champ « Exempté de taxe ? » dans Actif sur vrai</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>