unpackaged/main/default/objects/SBQQ__TaxExemptionCertificate__c/fields/SBQQ__IssuingAuthority__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__IssuingAuthority__c</fullName>
    <description>The authority, such as a government agency or country (for European organizations), that issued the certificate</description>
    <inlineHelpText>L’autorité, par exemple une agence gouvernementale ou un pays (pour les organisations européennes), qui a émis le certificat</inlineHelpText>
    <label>Issuing Authority</label>
    <length>50</length>
    <type>Text</type>
</CustomField>